# zeversolarlocal

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
tests/: test_api.py  test_cli.py
zeversolarlocal/: __init__.py  __main__.py  api.py  cli.py
