[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "zeversolarlocal"
description-file = "README.md"
author = "Sander Teunissen"
requires-python = ">=3.7"
requires = ["httpx"]
home-page = "https://github.com/sander76/zeversolarlocal"
keywords = "solar,async,energy"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
    [tool.flit.metadata.requires-extra]
    test = ["pytest", "pytest-asyncio", "pytest-mock"]
    dev = ["pylint", "nox", "pytest-cov", "coverage[toml]>=5.0.3", "pre-commit"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov zeversolarlocal --cov-report xml:cov.xml --cov-report term-missing -vv"

[tool.isort]
profile = "black"
src_paths = ["tests", "zeversolarlocal"]
